# multidimensional-backtracking

./: .gitignore  README.md  create_zip.sh
code/: .gitignore  .mypy.ini  README.md  pyproject.toml  requirements.txt  setup.cfg
code/dependencies/dataset-downloader/: README.md  setup.py
code/scripts/: appendix_plots.py  exp_big_logreg.py  exp_small_linreg.py  exp_small_logreg.py  experiments_fig1.py  fig1_plot.py  legend_plot.py  main_plot.py  pareto_plot.py  print_cond_num.py  run_all.sh
code/src/precsearch/: __init__.py  anim.py  constants.py  linalg.py  plotting.py  plotting_style.py
code/src/precsearch/config/: __init__.py
code/src/precsearch/datasets/: __init__.py
code/src/precsearch/experiments/: __init__.py  constants.py  datalogger.py  expdefs.py  experiment.py  rate_limited_logger.py
code/src/precsearch/initializations/: __init__.py
code/src/precsearch/optimizers/: base_optimizers.py  diagonalbb.py  hypergd.py  lgfbs_scipy.py  online_learning_optimizers.py  optimizers.py  preconditioner_search.py  rmsprop.py  rprop.py
code/src/precsearch/problems/: __init__.py
