[metadata]
name = precsearch
version = 0.0.1
author = authors
author_email = authors@gmail.org
description = Preconditioner search plotting and experiments
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
